# kukuri-client

./: .clinerules  .gitignore  .mcp.json.example  CLAUDE.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/: settings.json
.devcontainer/: Dockerfile  apply-mcp-settings.sh  devcontainer.json  sync-mcp-settings.sh
docs/: automerge-llms.md  blueprint_phase1.md  design_doc.md  iroh-context.md
memory-bank/: activeContext.md  productContext.md  progress.md  project_brief.md  projectbrief.md  systemPatterns.md  techContext.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs  test_setup.rs  test_utils.rs
src-tauri/src/commands/: auth.rs  mod.rs  post.rs  profile.rs  settings.rs
src-tauri/src/models/: mod.rs  post.rs  settings.rs  user.rs
src-tauri/src/network/: iroh.rs  mod.rs
src-tauri/src/storage/: automerge.rs  change_tracker.rs  docs.rs  error.rs  events.rs  iroh_docs_sync.rs  iroh_node.rs  mod.rs  models.rs  state.rs  storage_manager.rs  sync_manager.rs  tests.rs  traits.rs  utils.rs
src-tauri/src/storage/repository/: mod.rs  post_repository.rs  settings_repository.rs  user_repository.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/tests/integration/: document_subscription_test.rs  document_sync_test.rs  mod.rs
src-tauri/tests/: integration_test.rs
src/components/layout/: Layout.tsx
src/hooks/: use-auth.ts  use-posts.ts  use-profile.ts  use-toast.ts  useDocumentEvents.ts
src/lib/: constants.ts  validators.ts
src/models/: post.ts  settings.ts  user.ts
src/pages/auth/: AuthPage.tsx
src/pages/home/: HomePage.tsx
src/pages/profile/: ProfilePage.tsx
src/pages/settings/: SettingsPage.tsx
src/services/: auth-service.ts  post-service.ts  profile-service.ts  settings-service.ts  storage-service.ts
src/stores/: auth-store.ts  post-store.ts  profile-store.ts  settings-store.ts
tests/: setup.ts
tests/e2e/: app.spec.ts  auth.spec.ts  post.spec.ts  profile.spec.ts  settings.spec.ts
tests/integration/: auth-flow.test.ts
tests/unit/models/: user.test.ts
tests/unit/services/: storage-service.test.ts
