[package]
name = "kukuri-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kukuri_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauriの依存関係
tauri = { version = "2", default-features = false , features = ["wry"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.21.3"

# エラーハンドリング
thiserror = "2.0.12"

# 暗号化と認証
base64 = "0.22.1"
ring = "0.17.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }

# iroh関連の依存関係
iroh = { version = "0.34.0", default-features = false, features = ["metrics"] }
iroh-gossip = { version = "0.34.0", features = ["net"] }
futures-lite = "2.3"
blake3 = "1.4"

# 非同期処理
tokio = { version = "1.36.0", features = ["rt", "macros", "time", "sync", "fs"] }
tokio-test = { version = "0.4.2", optional = true }
tempfile = "3.19.1"
mockall = "0.13.1"
test-log = "0.2.15"
env_logger = "0.11.2"

# コンパイラの内部エラーを回避するための設定
[profile.dev]
# 最適化レベルを下げる
opt-level = 0
# コード生成ユニットを小さくする
codegen-units = 16
# デバッグ情報を含める
debug = true
# SIMD関連の最適化を無効にする
[profile.dev.package."*"]
opt-level = 0

# リンカーのメモリ使用量を制限する
[profile.release]
strip = true  # デバッグシンボルを削除
opt-level = "s"  # サイズ最適化
lto = true  # リンク時最適化
codegen-units = 1  # コード生成ユニットを最小化

[features]
# テスト用の機能フラグ
test-utils = ["tokio-test"]
