[package]
name = "kukuri-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kukuri_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# Tauriの依存関係
tauri = { version = "2.5.1", default-features = false , features = ["wry"] }
tauri-plugin-opener = "2.2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.21.3"

# エラーハンドリング
thiserror = "2.0.12"

# 暗号化と認証
base64 = "0.22.1"
ring = "0.17.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }

# iroh関連の依存関係
iroh = { version = "0.35.0", default-features = false, features = ["metrics"] }
iroh-gossip = { version = "0.35.0", features = ["net"] }
iroh-docs = { version = "0.35.0", features = ["engine", "net", "rpc"] } # rpc feature を追加
iroh-blobs = { version = "0.35.0", features = ["fs-store", "net_protocol"] }
futures-lite = "2.3"
blake3 = "1.8.2"
async-channel = "2.2.0" # ハイフンに修正
anyhow = "1.0.98" # Add anyhow
bytes = "1" # Add bytes
quic-rpc = { version = "0.20.0", features = ["flume-transport"] } # Update quic-rpc version to 0.20.0
lazy_static = "1.4.0" # Add lazy_static

# 非同期処理
tokio = { version = "1.45.1", features = ["rt", "macros", "time", "sync", "fs"] }
tokio-test = { version = "0.4.2", optional = true }
tempfile = "3.20.0"
mockall = "0.13.1"
test-log = "0.2.15"
env_logger = "0.11.8"
tracing = "0.1"

# SIMD関連の最適化を無効にする
[profile.dev.package."*"]
opt-level = 0

# リンカーのメモリ使用量を制限する
[profile.release]
strip = true  # デバッグシンボルを削除
opt-level = "s"  # サイズ最適化
lto = true  # リンク時最適化
codegen-units = 1  # コード生成ユニットを最小化

[features]
# テスト用の機能フラグ
test-utils = ["tokio-test"]
